--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
     ],
     "autoload": {
         "psr-4": {
-            "WoowUp\\": "src/"
+            "WoowUp\\": "src/",
+            "WoowUpTest\\": "tests/",
         }
+    },
+    "require-dev": {
+        "vlucas/phpdotenv": "^2.4"
     }
 }
