--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "autoload": {
         "psr-4": {
             "WoowUp\\": "src/",
-            "WoowUpTest\\": "tests/",
+            "WoowUpTest\\": "tests/"
         }
     },
     "require-dev": {
